refactored Tokenizer.java & Pson.java